impulse-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: impulse-front-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: impulse-front
  template:
    metadata:
      labels:
        app: impulse-front
    spec:
      containers:
      - name: impulse-front-container
        image: 174907374174.dkr.ecr.eu-west-2.amazonaws.com/impulse-front:latest
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: impulse-front-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: impulse-front
