my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: impulse-front-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:174907374174:certificate/ca68e983-d8b4-41c1-b5f2-e1fc9b46da75
spec:
  rules:
  - host: cryptocoinpulse.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: impulse-front-service
            port:
              number: 80
